# yamlamldingdong

./: .gitignore  AUTHORS  BackEnd.cpp  CMakeLists.txt  ChoiceGroup.cpp  ChoiceGroup.h  ChoiceItem.cpp  ChoiceItem.h  Job.cpp  Job.h  ListQVM.cpp  ListQVM.cpp.GOING_AWAY  ListQVM.h  Page1Form.ui.qmlc  Page2Form.ui.qmlc  README.md  Widget.cpp  Widget.h  YamlUtils.cpp  Yddx.cpp  Yddx.h  main.cpp  main.qml  main.qmlc  main.ui  mainwindow.ui  rectangle.qml
examples/: docs.conf  minimal.conf  yaml.conf  yaml2.conf
yddy/: Application.cpp  Application.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h
